change code cell to markdown

--- a/magnuson_capstone.ipynb
+++ b/magnuson_capstone.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This notebook will be used for the capstone "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -14,7 +21,7 @@
     }
    ],
    "source": [
-    "## notebook for coursera capstone \n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "print(\"Hello Capstone Project Course!\")"
