--- a/magnuson_capstone.ipynb
+++ b/magnuson_capstone.ipynb
@@ -4,35 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook will be used for the capstone "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Capstone Project Course!\n"
-     ]
-    }
-   ],
-   "source": [
+    "## Final Project Overview\n",
+    "### Opportunity Statement\n",
     "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "print(\"Hello Capstone Project Course!\")"
+    "The Covid pandemic resulted in a greatly renewed interest in nature & outdoor activities, due to safety issues and restrictions placed on typical indoor attractions in urban areas. \n",
+    "\n",
+    "The Google Trends data below shows the enormous spike in searches for \"Outdoor Activities\" in the US in 2020 compared to the preceeding 5 years.\n",
+    "\n",
+    "![title](trendsplot.png)\n",
+    "\n",
+    "While one can assume some return closer to pre-pandemic baselines once the pandemic is addressed, interest in outdoor-oriented vacations/remote work can reasonably be expected to remain at a higer level than they were pre-pandemic.  \n",
+    "\n",
+    "This project will attempt to assist an investor attempting to take advantage of this renewed interest in outdoor experience, by identifying smaller rural cities and towns with an abundance of outdoor activity.\n",
+    "\n",
+    "My datasets will leverage the [Foursquare Places API](https://developer.foursquare.com/docs/places-api/) to identify outdoor places and the [Zillow Home Values Forecast (City Admin Level)](https://www.zillow.com/research/data/) to identify home values in these areas.  \n",
+    "\n",
+    "I will then cluster the data using K-Means Clustering to identify ideal markets for a potential investment into a vacation rental home."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
