--- a/magnuson_capstone.ipynb
+++ b/magnuson_capstone.ipynb
@@ -15,9 +15,9 @@
     "\n",
     "While one can assume some return closer to pre-pandemic baselines once the pandemic is addressed, interest in outdoor-oriented vacations/remote work can reasonably be expected to remain at a higer level than they were pre-pandemic.  \n",
     "\n",
-    "This project will attempt to assist an investor attempting to take advantage of this renewed interest in outdoor experience, by identifying smaller rural cities and towns with an abundance of outdoor activity.\n",
+    "This project will attempt to assist an investor attempting to take advantage of this renewed interest in outdoor experience, by identifying smaller rural cities and towns with an abundance of outdoor activity and stable housing values to investigate an investment in a vacation rental home to list on the prominent rental platforms.\n",
     "\n",
-    "My datasets will leverage the [Foursquare Places API](https://developer.foursquare.com/docs/places-api/) to identify outdoor places and the [Zillow Home Values Forecast (City Admin Level)](https://www.zillow.com/research/data/) to identify home values trends in these areas.  \n",
+    "My datasets will leverage the [Foursquare Places API](https://developer.foursquare.com/docs/places-api/) to identify outdoor places and the [Zillow Home Values Forecast (City Admin Level)](https://www.zillow.com/research/data/) to identify home value trends in these areas.  \n",
     "\n",
     "I will then cluster the data using K-Means Clustering to identify ideal markets for a potential investment into a vacation rental home."
    ]
@@ -255,7 +255,7 @@
    "metadata": {},
    "source": [
     "#### Foursquare Places API\n",
-    "The Foursquare Places API will be used to identify Outdoor "
+    "The Foursquare Places API will be used to identify Outdoor opportunities, first by searching for trails within 5000m of city lat/long, then by querying additional venues."
    ]
   },
   {
