--- a/magnuson_capstone.ipynb
+++ b/magnuson_capstone.ipynb
@@ -13,13 +13,13 @@
     "\n",
     "![title](trendsplot.png)\n",
     "\n",
-    "While one can assume some return closer to pre-pandemic baselines once the pandemic is addressed, interest in outdoor-oriented vacations/remote work can reasonably be expected to remain at a higer level than they were pre-pandemic.  \n",
+    "While one can assume some return closer to pre-pandemic baselines once the pandemic is addressed, interest in outdoor-oriented vacations/remote work can reasonably be expected to remain at a higher level than they were pre-pandemic, leading to continued opportunity in vacation rental housing in these markets with an abundance of options. This is likely to be complimented by the increasing acceptance of remote work, given office closures throughout 2020, potentially creating a larger market for work/leisure travel, increasing the potential weeks Americans could travel without requiring vacation days. \n",
     "\n",
-    "This project will attempt to assist an investor attempting to take advantage of this renewed interest in outdoor experience, by identifying smaller rural cities and towns with an abundance of outdoor activity and stable housing values to investigate an investment in a vacation rental home to list on the prominent rental platforms.\n",
+    "This project will attempt to assist an investor attempting to take advantage of this renewed interest in outdoor experience, by identifying smaller rural cities and towns with an abundance of outdoor activity and stable housing values to investigate an investment in a vacation rental home to list on the prominent rental platforms (Airbnb/VRBO/etc).\n",
     "\n",
     "My datasets will leverage the [Foursquare Places API](https://developer.foursquare.com/docs/places-api/) to identify outdoor places and the [Zillow Home Values Forecast (City Admin Level)](https://www.zillow.com/research/data/) to identify home value trends in these areas.  \n",
     "\n",
-    "I will then cluster the data using K-Means Clustering to identify ideal markets for a potential investment into a vacation rental home."
+    "I will then cluster the data using K-Means Clustering to identify ideal markets for a potential investment into a vacation rental home.  The goal is to identify clusters of potentially undervalued markets from a housing investment perspective to aid in smarter real estate investment decisions."
    ]
   },
   {
@@ -260,30 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: geopy in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (2.0.0)\n",
-      "Requirement already satisfied: geographiclib<2,>=1.49 in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (from geopy) (1.50)\n",
-      "Requirement already satisfied: folium==0.5.0 in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (0.5.0)\n",
-      "Requirement already satisfied: branca in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (from folium==0.5.0) (0.4.1)\n",
-      "Requirement already satisfied: jinja2 in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (from folium==0.5.0) (2.11.2)\n",
-      "Requirement already satisfied: requests in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (from folium==0.5.0) (2.23.0)\n",
-      "Requirement already satisfied: six in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (from folium==0.5.0) (1.15.0)\n",
-      "Requirement already satisfied: MarkupSafe>=0.23 in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (from jinja2->folium==0.5.0) (1.1.1)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (from requests->folium==0.5.0) (2.10)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (from requests->folium==0.5.0) (1.25.9)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (from requests->folium==0.5.0) (3.0.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/jmagnus/opt/anaconda3/lib/python3.8/site-packages (from requests->folium==0.5.0) (2020.6.20)\n",
-      "Folium installed\n",
-      "Libraries imported.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests # library to handle requests\n",
     "import pandas as pd # library for data analsysis\n",
@@ -295,17 +274,16 @@
     "from geopy.geocoders import Nominatim # module to convert an address into latitude and longitude values\n",
     "\n",
     "# libraries for displaying images\n",
-    "from IPython.display import Image \n",
-    "from IPython.core.display import HTML \n",
+    "#from IPython.display import Image \n",
+    "#from IPython.core.display import HTML \n",
     "    \n",
     "# tranforming json file into a pandas dataframe library\n",
     "from pandas.io.json import json_normalize\n",
     "\n",
+    "#! pip3 install folium==0.5.0\n",
+    "#import folium # plotting library\n",
     "\n",
-    "! pip3 install folium==0.5.0\n",
-    "import folium # plotting library\n",
-    "\n",
-    "print('Folium installed')\n",
+    "#print('Folium installed')\n",
     "print('Libraries imported.')"
    ]
   },
