--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -10301,7 +10301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cluster 3"
+    "#### Cluster 3 Rural Farm"
    ]
   },
   {
@@ -10663,7 +10663,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Cluster 4"
+    "### Cluster 4 -- The Target Cluster\n",
+    "This cluster contains cities with the highest concentration of active outdoor venues (Trails, Skiing, Athletics)\n",
+    "It also contains three of the cities internally I was targetting as a baseline -- Vail, Telluride, and Ouray.\n",
+    "\n",
+    "This cluster presents a number of additional cities to investigate further at different price points. "
    ]
   },
   {
