catching up on changes to move to subd

--- a/Week3_Pt2.ipynb
+++ b/Week3_Pt2.ipynb
@@ -161,7 +161,8 @@
     "        g = geocoder.arcgis('{}, Toronto, Ontario'.format(postal_code))\n",
     "        lati_long_coords = g.latlng\n",
     "    return lati_long_coords\n",
-    "    \n",
+    "\n",
+    "#sanity check\n",
     "get_latilong('M4G')"
    ]
   },
@@ -438,12 +439,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# output part 2 csv \n",
     "df.to_csv('toronto_coords.csv',index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
