--- a/Week3_capstone.ipynb
+++ b/Week3_capstone.ipynb
@@ -1914,6 +1914,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('toronto.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
    "outputs": [
