--- a/magnuson_capstone.ipynb
+++ b/magnuson_capstone.ipynb
@@ -307,7 +307,7 @@
     "\n",
     "![title](Images/clustermap.png)\n",
     "\n",
-    "I then merged this data with the Zillow Home Forecast Data (using the September '20 values) to identify "
+    "I then merged this data with the Zillow Home Value Index (using the September '20 values) to identify median home values in each city to target cities for further research."
    ]
   },
   {
@@ -366,6 +366,7 @@
     "\n",
     "Some additional approaches may be to incorporate:\n",
     "\n",
+    "** Perform Linear Regression on ZHVI per target city \n",
     "** Distance from Denver\n",
     "** Real Estate Price Trends\n",
     "** Non-outdoor venue density valued by vacationers (bars, cafes, restaurants)\n",
@@ -373,6 +374,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
